--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,163 +1,158 @@
-<h1>コネポケで禁止されている出品物</h1>
+<h3>コネポケで禁止されている出品物</h3>
 <hr>
-<h2><font color="#ff0000"> <b>法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの</b> </font></h2>
 
-<font size="5" color="#ff0000" font-weight="bold">
-法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの<br>
-size5bold
-</font>
-<br>
-<br>
-<span style="font: 16pt bold">
-法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの<br>
-spanスタイルbold16pt
-</span>
-<br>
-<br>
-<div style="font: 16pt bold #ff0000">
-法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの<br>
-divスタイルbold16pt</div>
+<h3><font color="#ff0000"> <strong>法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの</strong> </font></h3>
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
-法令違反に抵触する恐れのあるもの
+法令違反に抵触する恐れのあるもの。<br>
 主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
 </div>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>銃砲類、刀剣類</b>
+<strong>銃砲類、刀剣類</strong>
 </div>
+
 <font color="#ff0000">銃刀法違反にあたるもの<br>
 武器類とみなされるもの</font>
-<br>
+
 <h3>■主な違反商品</h3>
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
-<li>拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 刀、ナイフ、包丁などで6cmを超えるもの </li>
+<li>拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 刀、ナイフ、包丁などで6cmを超えるもの</li>
 <br>
-<li>違法改造物や殺傷能力のあるエアガン、モデルガン </li>
+<li>違法改造物や殺傷能力のあるエアガン、モデルガン<br>
 <br>
 上記の製造、並びに改造に関するデータ<br>
-<font color="#ff0000">※法律上の許可、登録などがあっても投稿不可</font>
+<font color="#ff0000">※法律上の許可、登録などがあっても投稿不可</font></li>
 </ul>
 </div>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>薬物</b>
+<strong>薬物</strong>
 </div>
+
 <font color="#ff0000">覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの</font>
 
 <h3>■主な違反商品</h3>
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物</li>
 <br>
 <li>毒物、劇物</li>
 </ul>
 </div>
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>盗難品・不正入手</b>
-</div>
-<font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font>
 
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>盗難品・不正入手</strong>
+</div>
+
+<font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font><br>
+<br>
 盗難・万引きしたもの、拾得したものや横領したもの、盗難品であることを知りながら出品する行為は窃盗罪、詐欺罪、盗品等関与罪および横領罪などの法律で厳しく処罰されます。
 
-### ■主な違反商品
-・窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの
+<h3>■主な違反商品</h3>
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>偽造品・偽ブランド品・レプリカ・模造品</b>
-</div>
-<font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの
-
-第三者の知的財産権を侵害しているもの
-
-他人の著作権を侵害する恐れがあるもの
-
-事務局が偽造品・レプリカ品、正規品と確証がない商品と判断したもの
-
-権利者から直接削除依頼があったもの
-
-偽物の可能性がある商品を見つけた場合は商品ページの「通報」からご連絡をお願いいたします。
-</font>
-### ■主な違反商品
-
-- 偽造貨幣、偽造カード、偽造印鑑、偽造文書
-
-- ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの
-
-- デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの
-
-- ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの
-
-- 海賊版CD、DVD(個人的に複製したものを含む)や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの
-
-- コピーガードを回避するツールなど、不正競争防止法違反に該当するもの
-
-- 芸能人などの肖像権を侵害するもの
-
-- テレビ・ラジオの録画録音テープ
-
-<font color="#ff0000">※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。</font>
-
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>金券、有価証券</b>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの</li>
+</ul>
 </div>
 
-<font color="#ff0000">現金、金券類、カード類
-
-有形／電子を問わず、以下の商品類と、高額で金銭と同等に扱われるもの
-</font>
-
-### ■主な違反商品
-
-・有価証券、小切手、手形、株券
-
-・現行流通している国内外の貨幣、通貨、仮想通貨
-
-・チャージ済みのプリペイドカード類(Suica、楽天Edy、nanaco、WAONなど)
-
-・アカウント登録済みのオンラインギフト券 (iTunesカード、Amazonギフト券など)
-
-・記名済みの航空券
-
-・口座、クレジットカード、キャッシュカード
-
-・預貯金や証券の口座、預貯金通帳
-
-・債券、小切手、未使用の切手(円)、収入印紙、登記印紙
-
-・宝くじ、勝馬投票券
-
-・貴金属の地金（インゴット）
-
-・その他、高額で金銭と同じ意味を持つもの
-
-※現在発行されていない過去の通貨・貨幣・コイン・古銭などは掲載可能
-
-・販売・配布元企業により譲渡が禁止とされているもの
-
-・ゲームのアカウントやアイテムのデータ
-
-・サンプル盤、デモ盤として貸与されているCD、DVD、ソフト
-
-・販促のために頒布しているポスター、パンフレット、看板
-
-・販売・配布元により貸与しているもの（ゲームセンターのコイン、SIMカードなど）
-
-・航空会社のマイレージ、その他各種ポイントカード、会員証
-
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>医薬品、医療機器</b>
+<strong>偽造品・偽ブランド品・レプリカ・模造品</strong>
 </div>
 
-<font color="#ff0000">医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの
+<font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの<br>
+<br>
+第三者の知的財産権を侵害しているもの<br>
+<br>
+他人の著作権を侵害する恐れがあるもの<br>
+<br>
+事務局が偽造品・レプリカ品、正規品と確証がない商品と判断したもの<br>
+<br>
+権利者から直接削除依頼があったもの<br>
+<br>
+偽物の可能性がある商品を見つけた場合は商品ページの「通報」からご連絡をお願いいたします。<br>
 </font>
 
-### ■主な違反商品
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<h3>■主な違反商品</h3>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>偽造貨幣、偽造カード、偽造印鑑、偽造文書</li>
+<br>
+<li>ブランド品のロゴを許諾なく使用する商品など、他人の商標権を侵害するもの</li>
+<br>
+<li>デザインやマークがブランド品やそのマークと酷似していると判断されるものや特定のブランドを想起させるもの</li>
+<br>
+<li>ブランド品の全部または一部を加工したリメイク品や加工のための素材として出品されたもの</li>
+<br>
+<li>海賊版CD、DVD（個人的に複製したものを含む）や許諾なくキャラクターなどを使用したハンドメイド品など、他人の著作権を侵害するもの</li>
+<br>
+<li>コピーガードを回避するツールなど、不正競争防止法違反に該当するもの</li>
+<br>
+<li>芸能人などの肖像権を侵害するもの</li>
+<br>
+<li>テレビ・ラジオの録画録音テープ<br>
+<font color="#ff0000">※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。</font></li>
+</ul>
+
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>金券、有価証券</strong>
+</div>
+<font color="#ff0000">現金、金券類、カード類<br>
+<br>
+有形／電子を問わず、以下の商品類と、高額で金銭と同等に扱われるもの<br>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>有価証券、小切手、手形、株券</li>
+<br>
+<li>現行流通している国内外の貨幣、通貨、仮想通貨</li>
+<br>
+<li>チャージ済みのプリペイドカード類(Suica、楽天Edy、nanaco、WAONなど)</li>
+<br>
+<li>アカウント登録済みのオンラインギフト券 (iTunesカード、Amazonギフト券など)</li>
+<br>
+<li>記名済みの航空券</li>
+<br>
+<li>口座、クレジットカード、キャッシュカード</li>
+<br>
+<li>預貯金や証券の口座、預貯金通帳</li>
+<br>
+<li>債券、小切手、未使用の切手(円)、収入印紙、登記印紙</li>
+<br>
+<li>宝くじ、勝馬投票券</li>
+<br>
+<li>貴金属の地金（インゴット）</li><br>
+<li>その他、高額で金銭と同じ意味を持つもの</li>
+※現在発行されていない過去の通貨・貨幣・コイン・古銭などは掲載可能</li>
+<br>
+<li>販売・配布元企業により譲渡が禁止とされているもの</li>
+<br>
+<li>ゲームのアカウントやアイテムのデータ</li>
+<br>
+<li>サンプル盤、デモ盤として貸与されているCD、DVD、ソフト<br>
+<br>
+<li>販促のために頒布しているポスター、パンフレット、看板<br>
+<br>
+<li>販売・配布元により貸与しているもの（ゲームセンターのコイン、SIMカードなど）</li>
+<br>
+<li>航空会社のマイレージ、その他各種ポイントカード、会員証</li>
+</ul>
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>医薬品、医療機器</strong>
+</div>
+<font color="#ff0000">医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの<br>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
 <ul>
 <li>全ての医薬品</li>
 <br>
@@ -178,561 +173,535 @@ divスタイルbold16pt</div>
 </div>
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
-＜医療機器＞
-
-医療機器の具体例についてはこちらをご覧ください。
-
-なお、医療機器は、第一次的に販売される際の箱に「高度管理医療機器」「管理医療機器」「一般医療機器」の別が書いてあります。
-
-販売に法律上の許可または届出を要する医療機器
-
+＜医療機器＞<br>
+<br>
+医療機器の具体例についてはこちらをご覧ください。<br>
+<br>
+なお、医療機器は、第一次的に販売される際の箱に「高度管理医療機器」「管理医療機器」「一般医療機器」の別が書いてあります。<br>
+<br>
+販売に法律上の許可または届出を要する医療機器<br>
+<br>
 （例）
-
-家庭用電気マッサージ器などの管理医療機器
-
-コンタクトレンズなどの高度管理医療機器
-
-心電計やパルスオキシメータなどの特定保守管理医療機器
-
-
-なお、救急絆創膏などの一般医療機器（特定保守管理医療機器を除く）は販売に許可または届出が不要であり出品可能ですが、 こちら の遵守すべき事項にご注意ください。
-
-＜その他＞
-
-薬効表現、標榜が薬機法に抵触するもの
-
-その他、薬機法に抵触するもの
-
-医薬品医療機器等法（薬機法）については こちら もご覧ください。
+<br>
+家庭用電気マッサージ器などの管理医療機器<br>
+<br>
+コンタクトレンズなどの高度管理医療機器<br>
+<br>
+心電計やパルスオキシメータなどの特定保守管理医療機器<br>
+<br>
+なお、救急絆創膏などの一般医療機器（特定保守管理医療機器を除く）は販売に許可または届出が不要であり出品可能ですが、 こちら の遵守すべき事項にご注意ください。<br>
+<br>
+＜その他＞<br>
+<br>
+薬効表現、標榜が薬機法に抵触するもの<br>
+<br>
+その他、薬機法に抵触するもの<br>
+<br>
+<a href="https://www.fukushihoken.metro.tokyo.lg.jp/kenkou/iyaku/koukokukisei/zenpanfrima/youtodokedekiki.html">医薬品医療機器等法（薬機法）については こちら もご覧ください。</a>
 </div>
-
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>許認可のない化粧品類や美容品</b>
+<strong>許認可のない化粧品類や美容品</strong>
 </div>
-
-<font color="#ff0000">許認可または手作りした化粧品類や美容品
+<font color="#ff0000">許認可または手作りした化粧品類や美容品
 </font>
-
-### ■主な違反商品
-
-・許認可のない手作りコスメ、化粧品、石鹸、シャンプー、コンディショナー、乳液など
-
-・製造番号・製造記号（ロットナンバー）や成分表示が、商品本体やその外箱に記載されていないまたは削られている化粧品類
-
-・個人的に輸入した化粧品類
-
-・小分けした化粧品、香水などの（小分け容器に移した物など）
-
-・その他、販売・譲渡に許認可を要するもの全般
-
-・その他、薬機法に抵触する化粧品類
-
-・医薬品医療機器等法（薬機法）については こちら もご覧ください。
-
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>
-人体、臓器、細胞、血液</b>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>許認可のない手作りコスメ、化粧品、石鹸、シャンプー、コンディショナー、乳液など</li>
+<br>
+<li>製造番号・製造記号（ロットナンバー）や成分表示が、商品本体やその外箱に記載されていないまたは削られている化粧品類</li>
+<br>
+<li>個人的に輸入した化粧品類</li>
+<br>
+<li>小分けした化粧品、香水などの（小分け容器に移した物など）</li>
+<br>
+<li>その他、販売・譲渡に許認可を要するもの全般</li>
+<br>
+<li>その他、薬機法に抵触する化粧品類</li>
+<br>
+<li><a href="https://www.mhlw.go.jp/stf/seisakunitsuite/bunya/kenkou_iryou/iyakuhin/index.html">医薬品医療機器等法（薬機法）については こちら もご覧ください。</a></li>
+</ul>
 </div>
-<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
-</font>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>
-密猟された動植物、販売禁止鳥獣</b>
+<strong>人体、臓器、細胞、血液</strong>
 </div>
-<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
-</font>
+<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
+</font>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>法令に抵触する、悪用される恐れのあるもの</b>
+<strong>密猟された動植物、販売禁止鳥獣</strong>
 </div>
-<font color="#ff0000">危険物や安全性に問題があるもの
-
-犯罪に使用される恐れのあるもの
-
-人体に危険を及ぼす可能性があるもの
-
-法令に抵触する状態に改造を施したもの
-</font>
-
-### ■主な違反商品
-
-・ピッキングツール、マスターキー、錠と一対になっていない鍵など
-
-・盗聴器、超小型カメラ、赤外線カメラなど
-
-・犯罪方法、テロ行為の手引き、爆発物や武器の製造方法などピッキング用具、その他の特殊開錠用具、開錠用の工具など
-
-・ホワイトカード・ICチップ、データスキミング装置など
-
-・花火や火薬など
-
-・PSマーク、PSCマークがないことで法令に抵触するもの
-
-・法令に抵触するレーザーポインター類
-
-・法令に抵触するトランシーバーなど
-
-・使用期限切れの化粧品類
-
-・開封済みの衛生用品など
-
-・配送会社や警察、その他公的機関の制服類
-
-・その他、悪用されるおそれのある制服類
-
-・領収書
-
-・免許証、パスポート、健康保険証など
-
-・個人情報（ID・パスワードなど）、プライバシーに関する情報、それらの情報が含まれた媒体
-
-・機密情報
-
-・その他、犯罪や違法行為に使用されるとみなされるもの
-
-2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。
-
+<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
+</font>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>たばこ</b>
+<strong>法令に抵触する、悪用される恐れのあるもの</strong>
 </div>
-
-### ■主な違反商品
-
-・たばこ、葉巻
-
-・ニコチンが含まれる電子たばこ、リキッド
-
-・その他ニコチンやタールが含まれるもの全般
-
+<font color="#ff0000">危険物や安全性に問題があるもの<br>
+<br>
+犯罪に使用される恐れのあるもの<br>
+<br>
+人体に危険を及ぼす可能性があるもの<br>
+<br>
+法令に抵触する状態に改造を施したもの<br>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>ピッキングツール、マスターキー、錠と一対になっていない鍵など</li>
+<br>
+<li>盗聴器、超小型カメラ、赤外線カメラなど</li>
+<br>
+<li>犯罪方法、テロ行為の手引き、爆発物や武器の製造方法などピッキング用具、その他の特殊開錠用具、開錠用の工具など</li>
+<br>
+<li>ホワイトカード・ICチップ、データスキミング装置など</li>
+<br>
+<li>花火や火薬など</li>
+<br>
+<li>PSマーク、PSCマークがないことで法令に抵触するもの</li>
+<br>
+<li>法令に抵触するレーザーポインター類</li>
+<br>
+<li>法令に抵触するトランシーバーなど</li>
+<br>
+<li>使用期限切れの化粧品類</li>
+<br>
+<li>開封済みの衛生用品など</li>
+<br>
+<li>配送会社や警察、その他公的機関の制服類</li>
+<br>
+<li>その他、悪用されるおそれのある制服類</li>
+<br>
+<li>領収書</li>
+<br>
+<li>免許証、パスポート、健康保険証など</li>
+<br>
+<li>個人情報（ID・パスワードなど）、プライバシーに関する情報、それらの情報が含まれた媒体</li>
+<br>
+<li>機密情報</li>
+<br>
+<li>その他、犯罪や違法行為に使用されるとみなされるもの<br>
+<br>
+2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>食料品、飲料品、アルコール類</b>
+<strong>たばこ</strong>
 </div>
-<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>たばこ、葉巻</li>
+<br>
+<li>ニコチンが含まれる電子たばこ、リキッド</li>
+<br>
+<li>その他ニコチンやタールが含まれるもの全般</li>
+</ul>
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>食料品、飲料品、アルコール類</strong>
+</div>
+<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの<br>
+<br>
 出品時に賞味(消費)期限を商品説明に記載するか、記載部分の写真を掲載してください。
-</font>
-### ■主な違反商品
-
-・保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）
-
-・賞味期限の切れた商品、開封済みの商品
-
-・消費(賞味)期限の記載のない食品
-
-・１週間以内に消費（賞味）期限が切れる食品
-
-・生の食肉、魚介類
-
-・取り扱いが難しい食品、保存期間が短い食品
-
-・健康増進法に違反する食品
-
-※食品を出品するには、食品衛生法および都道府県条例の規定に適合していなければなりません。
-
-・食品衛生法（外部サイト）
-
-・東京都の食品安全情報サイト（外部サイト）
-
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>法令に抵触するサプリメント類</b>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）</li>
+<br>
+<li>賞味期限の切れた商品、開封済みの商品</li>
+<br>
+<li>消費(賞味)期限の記載のない食品</li>
+<br>
+<li>１週間以内に消費（賞味）期限が切れる食品</li>
+<br>
+<li>生の食肉、魚介類</li>
+<br>
+<li>取り扱いが難しい食品、保存期間が短い食品</li>
+<br>
+<li>健康増進法に違反する食品<br><font color="#ff0000">※食品を出品するには、食品衛生法および都道府県条例の規定に適合していなければなりません。</font></li>
+<br>
+<li><a href="https://www.mhlw.go.jp/stf/seisakunitsuite/bunya/kenkou_iryou/shokuhin/index.html">食品衛生法（外部サイト）</a></li>
+<br>
+<li><a href="https://www.fukushihoken.metro.tokyo.lg.jp/shokuhin/">東京都の食品安全情報サイト（外部サイト）</a></li>
+</ul>
 </div>
-
-### ■主な違反商品
-
-・法令に抵触するサプリメント類
-
-・医薬品に該当する成分が含まれているもの
-
-・成分の形成で法令に抵触するもの
-
-・薬効表現、標榜が法令に抵触するもの
-
-・海外並行輸入品
-
-・その他、人体に危険を及ぼす可能性があるとみなされるもの
-
-・医薬品医療機器等法（薬機法）についてはこちらもご覧ください。
-
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>チケット類</b>
+<strong>法令に抵触するサプリメント類</strong>
 </div>
-
-<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
-
-記名式の航空券
-
-使用が利用者本人に限られているもの
-
-手元にないチケット類
-
-予約番号だけなど未払い状態のチケット
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>法令に抵触するサプリメント類</li>
+<br>
+<li>医薬品に該当する成分が含まれているもの</li>
+<br>
+<li>成分の形成で法令に抵触するもの</li>
+<br>
+<li>薬効表現、標榜が法令に抵触するもの</li>
+<br>
+<li>海外並行輸入品</li>
+<br>
+<li>その他、人体に危険を及ぼす可能性があるとみなされるもの</li>
+<br>
+<li><a href="https://www.fukushihoken.metro.tokyo.lg.jp/kenkou/iyaku/koukokukisei/zenpanfrima/furimakisei.html">医薬品医療機器等法（薬機法）についてはこちらもご覧ください。</a></li>
+</ul>
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>チケット類</strong>
+</div>
+<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット<br>
+<br>
+記名式の航空券<br>
+<br>
+使用が利用者本人に限られているもの<br>
+<br>
+手元にないチケット類<br>
+<br>
+予約番号だけなど未払い状態のチケット<br>
+<br>
 その他、上記と同等とみなされるもの
 </font>
-
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>象牙および希少野生動植物種の個体</b>
+<strong>象牙および希少野生動植物種の個体</strong>
 </div>
-
-<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
-</font>
-
-### ■主な違反商品
-
-・象牙の全形、カットピースおよび象牙の加工品全般
-
-・希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの全般
-
-・その他、法令に抵触するもの
-
-・種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。
-
+<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>象牙の全形、カットピースおよび象牙の加工品全般</li>
+<br>
+<li>希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの全般</li>
+<br>
+<li>その他、法令に抵触するもの</li>
+<br>
+<li>種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>危険なもの</b>
+<strong>危険なもの</strong>
 </div>
-
-<font color="#ff0000">発火性のあるもの
-
-武器として使用される恐れのあるもの
-</font>
-
-### ■主な違反商品
-
-・火薬、爆発物、灯油、ガソリン、各種高圧ガス、液化石油ガスなどの危険物
-
-・ボーガン、スタンガン、スピアガン、スリングショット、改造エアガンやその部品など
-
-・二節根、三節根、トンファー、手裏剣、ヌンチャク、ナックルガード、メリケンサック、特殊警棒など
-
-・催涙スプレーなど
-
+<font color="#ff0000">発火性のあるもの<br>
+<br>
+武器として使用される恐れのあるもの<br>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>火薬、爆発物、灯油、ガソリン、各種高圧ガス、液化石油ガスなどの危険物</li>
+<br>
+<li>ボーガン、スタンガン、スピアガン、スリングショット、改造エアガンやその部品など</li>
+<br>
+<li>二節根、三節根、トンファー、手裏剣、ヌンチャク、ナックルガード、メリケンサック、特殊警棒など</li>
+<br>
+<li>催涙スプレーなど</li>
+<ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>農薬</b>
+<strong>農薬</strong>
 </div>
-
-### ■主な違反商品
-
-・届出のない者により出品された農薬
-
-・小分けされた農薬
-
-・農薬取締法に基づき販売が禁止された農薬
-
-・国内で登録されていない農薬
-
-・ラベルが剥がれた農薬
-
-・その他農薬取締法に抵触するもの
-
-・販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>届出のない者により出品された農薬</li>
+<br>
+<li>小分けされた農薬</li>
+<br>
+<li>農薬取締法に基づき販売が禁止された農薬</li>
+<br>
+<li>国内で登録されていない農薬</li>
+<br>
+<li>ラベルが剥がれた農薬</li>
+<br>
+<li>その他農薬取締法に抵触するもの</li>
+<br>
+<li>販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>危険ドラッグ</b>
+<strong>危険ドラッグ</strong>
 </div>
-
-### ■主な違反商品
-
-・いわゆる脱法・合法ドラッグ、シンナーなどの有機溶剤・ガスなど
-
-・精力剤、媚薬など
-
-※法令で販売・所持が規制されていなくても、本来と異なる用途を意図して販売することで、心身への影響が懸念される場合は投稿不可
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>いわゆる脱法・合法ドラッグ、シンナーなどの有機溶剤・ガスなど</li>
+<br>
+<li>精力剤、媚薬など<br>※法令で販売・所持が規制されていなくても、本来と異なる用途を意図して販売することで、心身への影響が懸念される場合は投稿不可</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>自己名義でない・所有者の変更登録ができない</b>
+<strong>自己名義でない・所有者の変更登録ができない</strong>
 </div>
-<font color="#ff0000">自己名義でないもの
-
+<font color="#ff0000">自己名義でないもの<br>
+<br>
 所有者の変更ができないまたは時間がかかるもの
-</font>
-
-### ■主な違反商品
-
-・自己名義以外・法人名義・残債がある・金融もの・抵当権がある・担保になっている
-
-・家族名義・その他、変更登録が出来ないとみなされるもの
-
-・上記に該当する以下のものは出品できません。
-
-・車、バイク、自転車、農業機械、船、ボート、ジェット、建設機械
-家、マンション、土地、田んぼ、畑、倉庫（登記している）
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>自己名義以外・法人名義・残債がある・金融もの・抵当権がある・担保になっている</li>
+<br>
+<li>家族名義・その他、変更登録が出来ないとみなされるもの</li>
+<br>
+<li>上記に該当する以下のものは出品できません。</li>
+<br>
+<li>車、バイク、自転車、農業機械、船、ボート、ジェット、建設機械
+家、マンション、土地、田んぼ、畑、倉庫（登記している）</li>
+</ul>
+</div>
 <hr>
-<h2> <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b></h2>
+<h3><font color="#ff0000">公序良俗、モラルに反するもの</font></h3>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>18禁、アダルト関連、児童ポルノ</b>
+<strong>18禁、アダルト関連、児童ポルノ</strong>
 </div>
-<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
-</font>
-
-### ■主な違反商品
-
-・性的描画、描写のあるもの
-
-・性的な表現のあるもの
-
-・裸姿、下着姿の描画、描写のあるもの
-
-・服装、肢体、タイトル、商品説明、作品内容などから、性的な姿態を連想させると弊社が総合的に判断した商品
-
-・アダルトDVD (BDなども含む)
-
-・アダルトゲーム
-
-・アダルトグッズ類
-
-・成人向け雑誌
-
-・R18指定のアダルト商品
-
-・性的描画、描写のあるもの
-
-・性的な表現のあるもの
-
-・裸姿、下着姿の描画、描写のあるもの
-
-・その他、上記に該当するとみなされるもの
-
-・使用済みの下着類(クリーニング済みであっても同様とします)
-
-・試着や水通しを行った下着類
-
-・新品であることが証明できない下着類 
-
-　※セット商品の場合は各商品の商品タグをご掲載ください
-
-・ブルセラ的な価値が上乗せされて出品、購入されていると判断されるもの
-
-・記載内容、金額や着用画像の掲載などによりブルセラと誤認する可能性があると事務局が判断するもの
-
-・その他、上記に該当すると判断されるもの
-
-・使用済みの学用ブルマ
-
-・その他、上記と同等品と判断されるもの
-
+<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>性的描画、描写のあるもの</li>
+<br>
+<li>性的な表現のあるもの</li>
+<br>
+<li>裸姿、下着姿の描画、描写のあるもの</li>
+<br>
+<li>服装、肢体、タイトル、商品説明、作品内容などから、性的な姿態を連想させると弊社が総合的に判断した商品</li>
+<br>
+<li>アダルトDVD (BDなども含む)</li>
+<br>
+<li>アダルトゲーム</li>
+<br>
+<li>アダルトグッズ類</li>
+<br>
+<li>成人向け雑誌</li>
+<br>
+<li>R18指定のアダルト商品</li>
+<br>
+<li>性的描画、描写のあるもの</li>
+<br>
+<li>性的な表現のあるもの</li>
+<br>
+<li>裸姿、下着姿の描画、描写のあるもの</li>
+<br>
+<li>その他、上記に該当するとみなされるもの</li>
+<br>
+<li>使用済みの下着類(クリーニング済みであっても同様とします)</li>
+<br>
+<li>試着や水通しを行った下着類</li>
+<br>
+<li>新品であることが証明できない下着類<br>※セット商品の場合は各商品の商品タグをご掲載ください</li>
+<br>
+<li>ブルセラ的な価値が上乗せされて出品、購入されていると判断されるもの</li>
+<br>
+<li>記載内容、金額や着用画像の掲載などによりブルセラと誤認する可能性があると事務局が判断するもの</li>
+<br>
+<li>その他、上記に該当すると判断されるもの</li>
+<br>
+<li>使用済みの学用ブルマ</li>
+<br>
+<li>その他、上記と同等品と判断されるもの</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>青少年の保護育成上好ましくないもの</b>
+<strong>青少年の保護育成上好ましくないもの</strong>
 </div>
-
-
-### ■主な違反商品
-
-・低俗、わいせつな商品
-
-・児童ポルノなど青少年の保護育成上好ましくないビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
-
-・[18禁」や「15禁」など、鑑賞に年齢規制などが課されているもの
-
-・モデルの容姿、服装、肢体、タイトル、商品説明などを総合的に判断し、未成年者を連想させるような商品
-
-・法令に違反している商品（無修正ビデオ、裏ビデオなど）
-
-・その他公序良俗に反すると当社が判断した商品
-
-・性風俗店に関するもの
-
-・性風俗店の宣伝広告、チケットなど
-
-・性風俗店への勧誘や同行行為
-
-・避妊具・アダルトグッズ
-
-・コンドームなどの避妊具
-
-・アダルトグッズやそれに類する商品
-
-・反社会的なもの、犯罪に関連する恐れのあるもの
-
-・暴力表現、犯罪表現を含むビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など
-
-・盗撮写真、盗撮ビデオ、盗聴テープなど無断で密かに採取された記録・情報・データなど
-
-・犯罪性の高いものおよび犯罪を誘発するおそれのあるもの
-
-・交通取締を免れる目的の商品など、脱法目的に利用される商品
-
-・暴力団、不良集団、テロ組織、暴走族などに関係する商品
-
-・反社会的なものまたはその可能性があると当社が判断した商品
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>低俗、わいせつな商品</li>
+<br>
+<li>児童ポルノなど青少年の保護育成上好ましくないビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など</li>
+<br>
+<li>[18禁」や「15禁」など、鑑賞に年齢規制などが課されているもの</li>
+<br>
+<li>モデルの容姿、服装、肢体、タイトル、商品説明などを総合的に判断し、未成年者を連想させるような商品</li>
+<br>
+<li>法令に違反している商品（無修正ビデオ、裏ビデオなど）</li>
+<br>
+<li>その他公序良俗に反すると当社が判断した商品</li>
+<br>
+<li>性風俗店に関するもの</li>
+<br>
+<li>性風俗店の宣伝広告、チケットなど</li>
+<br>
+<li>性風俗店への勧誘や同行行為</li>
+<br>
+<li>避妊具・アダルトグッズ</li>
+<br>
+<li>コンドームなどの避妊具</li>
+<br>
+<li>アダルトグッズやそれに類する商品</li>
+<br>
+<li>反社会的なもの、犯罪に関連する恐れのあるものv
+<br>
+<li>暴力表現、犯罪表現を含むビデオ・ＤＶＤ・写真集・ゲームソフト・書籍・雑誌など</li>
+<br>
+<li>盗撮写真、盗撮ビデオ、盗聴テープなど無断で密かに採取された記録・情報・データなど</li>
+<br>
+<li>犯罪性の高いものおよび犯罪を誘発するおそれのあるもの</li>
+<br>
+<li>交通取締を免れる目的の商品など、脱法目的に利用される商品</li>
+<br>
+<li>暴力団、不良集団、テロ組織、暴走族などに関係する商品</li>
+<br>
+<li>反社会的なものまたはその可能性があると当社が判断した商品</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>不衛生なもの・不快感を与えるもの</b>
+<strong>不衛生なもの・不快感を与えるもの</strong>
 </div>
-
-### ■主な違反商品
-
-・汚物、排泄物、廃棄物、動物死体、清潔でない商品、その他の不潔なもの
-
-・死体写真・画像のようなグロテスクな商品、その他嫌悪感・不快感を与えるもの
-
-## <b>その他、コネポケが不適切と判断したもの</b>
-
-## 【生体・ぺット】
-
-・全ての生体
-
-・投稿時点で生まれていない生体
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>汚物、排泄物、廃棄物、動物死体、清潔でない商品、その他の不潔なもの</li>
+<br>
+<li>死体写真・画像のようなグロテスクな商品、その他嫌悪感・不快感を与えるもの</li>
+</ul>
+</div>
+<h3><font color="#ff0000">その他、コネポケが不適切と判断したもの</font></h3>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>物品ではないもの</b>
+<strong>生体・ぺット</strong>
 </div>
-<font color="#ff0000">ゲームアカウントやゲーム内の通貨
-
-アイテムなどの電子データ
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>全ての生体</li>
+<br>
+<li>投稿時点で生まれていない生体</li>
+</ul>
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>物品ではないもの</strong>
+</div>
+<font color="#ff0000">ゲームアカウントやゲーム内の通貨<br>
+<br>
+アイテムなどの電子データ<br>
+<br>
 情報、サービスの提供など
-</font>
-
-### ■主な違反商品
-
-・オンラインゲームの電子データ
-
-・情報商材（ノウハウや情報の提供）、スキルシェアその他のサービス、役務など 
-MLM(マルチレベルマーケティング)商品
-
-・宿題や自由研究、論文など、本来自らが行うべき行為の他者による代行・代筆（完成品を含む）
-
-・懸賞、チャリティを謳ったもの
-
-・アカウント（ID） ※SNSなどサービスの種類を問わず
-
-・コンピュータウイルスなど
-
-・個人情報に該当するものなど
-
-・違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など
-
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>手元にないもの</b>
+</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>オンラインゲームの電子データ</li>
+<br>
+<li>情報商材（ノウハウや情報の提供）、スキルシェアその他のサービス、役務などMLM(マルチレベルマーケティング)商品</li>
+<br>
+<li>宿題や自由研究、論文など、本来自らが行うべき行為の他者による代行・代筆（完成品を含む）</li>
+<br>
+<li>懸賞、チャリティを謳ったもの</li>
+<br>
+<li>アカウント（ID） ※SNSなどサービスの種類を問わず</li>
+<br>
+<li>コンピュータウイルスなど</li>
+<br>
+<li>個人情報に該当するものなど</li>
+<br>
+<li>違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など</li>
+</ul>
 </div>
-
-### ■主な違反商品
-
-・商品が手元にない
-
-・取り寄せが必要な商品
-
-・発売前、公開前で手元にないとみなされるもの
-
-・その他、手元にないと判断されるもの
-
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>福袋 (内包される商品の名称や写真がないもの)</b>
+<strong>手元にないもの</strong>
 </div>
-
-### ■主な違反商品
-
-<h3>■主な違反商品 h3</h3>
-
-・いくつかの商品の中から複数の商品をランダムで組み合わせ、セット内容が不透明な商品
-
-・セット商品において、掲載画像から実際の商品内容が特定できないもの
-
-・その他、商品の内容が不透明、不明瞭なもの
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>商品が手元にない</li>
+<br>
+<li>取り寄せが必要な商品</li>
+<br>
+<li>発売前、公開前で手元にないとみなされるもの</li>
+<br>
+<li>その他、手元にないと判断されるもの</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>携帯電話端末について</b>
+<strong>福袋 (内包される商品の名称や写真がないもの)</strong>
 </div>
-<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
-
-残債がある携帯端末、契約中の携帯端末
-
-出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。
-
-残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
-</font>
-
-### ■主な違反商品
-
-<h3>■主な違反商品 h3</h3>
-
-・アクティベーションロックが解除されていないもの
-
-・ネットワーク利用制限がかかっているもの
-
-・完済していることが明確に証明されていないもの
-
-・解約前のプリペイド式携帯電話
-
-・その他、上記と同等とみなされるもの
-
-・利用制限のかかった携帯電話
-
-・契約者名義の変更を前提としない通話可能な携帯電話
-
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>いくつかの商品の中から複数の商品をランダムで組み合わせ、セット内容が不透明な商品
+<br>
+<li>セット商品において、掲載画像から実際の商品内容が特定できないもの</li>
+<br>
+<li>その他、商品の内容が不透明、不明瞭なもの</li>
+</ul>
+</div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>携帯電話端末について</strong>
+</div>
+<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末<br>
+<br>
+残債がある携帯端末、契約中の携帯端末</font><br>
+<br>
+出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。<br>
+<br>
+残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>アクティベーションロックが解除されていないもの</li>
+<br>
+<li>ネットワーク利用制限がかかっているもの</li>
+<br>
+<li>完済していることが明確に証明されていないもの</li>
+<br>
+<li>解約前のプリペイド式携帯電話</li>
+<br>
+<li>その他、上記と同等とみなされるもの</li>
+<br>
+<li>利用制限のかかった携帯電話</li>
+<br>
+<li>契約者名義の変更を前提としない通話可能な携帯電話</li>
+</ul>
+</div>
 <div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
-※ソフトバンクモバイル株式会社（以下、ソフトバンクモバイル）および株式会社エヌ・ティ・ティ・ドコモ（以下、ドコモ）が販売する携帯電話機を出品する際は製造番号を問い合わせユーザー様に開示してください。（投稿内に製造番号を記載する必要はございません。）
-
-＜下記のご案内をしています＞
-
-携帯電話会社各社が提供するウェブサイト（詳細下記）において、製造番号を入力し、不正に入手された携帯電話機ではないことを確認したうえでの取引をお願いいたします。
-
-なお、製造番号が不明な場合は取引をお控えください。参考：携帯電話会社各社が提供するウェブサイト（以下のリンクは外部サイトとなります。）
-
-・ソフトバンクモバイル： ネットワーク利用制限携帯電話機について
-
- 　※携帯電話の場合はこちら
-
-・ドコモ： ドコモ ネットワーク利用制限携帯電話機確認サイト
-
-・KDDI：ネットワーク利用制限携帯電話機について
-</div>
-
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
-（内海追加）<br>
 ※ソフトバンクモバイル株式会社（以下、ソフトバンクモバイル）および株式会社エヌ・ティ・ティ・ドコモ（以下、ドコモ）が販売する携帯電話機を出品する際は製造番号を問い合わせユーザー様に開示してください。（投稿内に製造番号を記載する必要はございません。）<br>
 <br>
 ＜下記のご案内をしています＞<br>
+<br>
 携帯電話会社各社が提供するウェブサイト（詳細下記）において、製造番号を入力し、不正に入手された携帯電話機ではないことを確認したうえでの取引をお願いいたします。<br>
 <br>
-なお、製造番号が不明な場合は取引をお控えください。参考：携帯電話会社各社が提供するウェブサイト（以下のリンクは外部サイトとなります。）<br>
+なお、製造番号が不明な場合は取引をお控えください。<br>
+参考：携帯電話会社各社が提供するウェブサイト（以下のリンクは外部サイトとなります。）<br>
 <br>
-・ソフトバンクモバイル： ネットワーク利用制限携帯電話機について<br>
-　※携帯電話の場合はこちら<br>
+<a href="https://mg.mb.softbank.jp/support/confirm.html">・ソフトバンクモバイル： ネットワーク利用制限携帯電話機について</a><br>
 <br>
-・ドコモ： ドコモ ネットワーク利用制限携帯電話機確認サイト<br>
+※携帯電話の場合はこちら<br>
 <br>
-・KDDI：ネットワーク利用制限携帯電話機について
+<a href="http://nw-restriction.nttdocomo.co.jp/top.php">・ドコモ： ドコモ ネットワーク利用制限携帯電話機確認サイト</a><br>
+<br>
+<a href="https://www.au.com/support/service/mobile/network-riyoseigen/">・KDDI：ネットワーク利用制限携帯電話機について</a><br>
 </div>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>事務局で不適切と判断されるもの</b>
+<strong>事務局で不適切と判断されるもの</strong>
 </div>
 <font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
 </font>
-
-### ■主な違反商品
-
-・ハードウェアウォレット
-
-・その他、違法物全般
-
-・トラブルの原因になるとみなされるもの
-
-・いたずら出品とみなされるもの
-
-・違法行為、違法商品の販売などの幇助にあたると判断するもの
-
-・利用規約に抵触するとみなされるもの
-
-・当社のシステムに悪影響を及ぼす可能性のある商品
-
-・スクリプトを使用するなどして当社のシステムに悪影響を及ぼす可能性のあるソフトウェア、その他サービスの運営を妨げるおそれのある商品
-
-・販売に際して法令で義務づけられている許認可や資格条件を満たしていない商品など規約に反する可能性のもの
-
-・その他、コネポケが取扱いを不適切と判断したもの
-
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>事務局で不適切と判断されるもの</b>
-</div>
-<font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
-</font>
+<h3>■主な違反商品</h3>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>ハードウェアウォレット</li>
 <br>
-
-### ■主な違反商品
-
-・ハードウェアウォレット
-
-・その他、違法物全般
+<li>その他、違法物全般</li>
+<br>
+<li>トラブルの原因になるとみなされるもの</li>
+<br>
+<li>いたずら出品とみなされるもの</li>
+<br>
+<li>違法行為、違法商品の販売などの幇助にあたると判断するもの</li>
+<br>
+<li>利用規約に抵触するとみなされるもの</li>
+<br>
+<li>当社のシステムに悪影響を及ぼす可能性のある商品</li>
+<br>
+<li>スクリプトを使用するなどして当社のシステムに悪影響を及ぼす可能性のあるソフトウェア、その他サービスの運営を妨げるおそれのある商品</li>
+<br>
+<li>販売に際して法令で義務づけられている許認可や資格条件を満たしていない商品など規約に反する可能性のもの</li>
+<br>
+<li>その他、コネポケが取扱いを不適切と判断したもの</li>
+</ul>
+</div>
 <hr>
