--- a/1.コネポケ公式ガイド/ルールとマナー/3.禁止出品物をみつけたら.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/3.禁止出品物をみつけたら.md
@@ -1,7 +1,23 @@
-# 禁止出品物をみつけたら
+<h3>禁止出品物をみつけたら</h3>
 <hr>
 <font color="#ff0000">禁止出品物を見つけたら対象商品の商品ページから通報を行なってください。
-</font>
+</font><br>
+<br>
+コネポケのガイドおよび利用規約に違反している可能性のある商品は、以下の手順でご報告ください。
 
-コネポケ事務局にて内容を確認されていただき、適切に対応いたします。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>通報の手順</strong>
+</div>
+
+<ol>
+<li>通報したい商品や相手ユーザーを特定できる商品を選択し、［通報］をタップ</li>
+<br>
+<li>違反の種類を選択し、通報理由の詳細を入力<br>
+<font color="#ff0000">※できる限り詳しく内容をご記入ください。</font></li>
+<br>
+<li>「問題の報告を送信しました」とメッセージが表示されたら報告完了です。</li>
+</ol>
+
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
 <hr>
