--- a/1.コネポケ公式ガイド/ルールとマナー/8.ドタキャンされました.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/8.ドタキャンされました.md
@@ -1,6 +1,40 @@
-# ドタキャンされました
+<h3>ドタキャンされました</h3>
 <hr>
-不適切な対応をされるユーザーがいらっしゃる場合、相手ユーザーを特定させていただくため商品画面の<font color="#ff0000">［通報］</font>から詳細をお知らせください。 
- 
-悪質なユーザーの場合はアカウント停止などを検討させていただきます。
+
+不適切な対応をされるユーザーがいる場合、相手ユーザーを特定させていただくため、商品画面の<font color="#ff0000">［通報］</font>から詳細をお知らせください。<br>
+<br>
+コネポケのガイドおよび利用規約に違反している可能性のある、相手ユーザーは、以下の手順でご報告ください。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>通報の手順</strong>
+</div>
+
+<ol>
+<li>通報したい商品や相手ユーザーを特定できる商品を選択し、［通報］をタップ</li>
+<br>
+<li>違反の種類を選択し、通報理由の詳細を入力<br>
+<font color="#ff0000">※できる限り詳しく内容をご記入ください。</font></li>
+<br>
+<li>「問題の報告を送信しました」とメッセージが表示されたら報告完了です。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>【通報できる内容】</strong>
+</div>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他</li>
+</ul>
+</div>
+
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。<br>
+<br>
+<font color="#ff0000">※悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
+
 <hr>
