--- a/5.利用規約など/ルールとマナー/6.事務局削除・警告について.md
+++ b/5.利用規約など/ルールとマナー/6.事務局削除・警告について.md
@@ -1,15 +1,22 @@
-# 事務局削除・警告について
-
-通報やコネポケ事務局が発見した規約に違反する商品や、コメント・迷惑行為・規約違反についてはコネポケ事務局にて内容を確認されていただき、適切に対応いたします。  
+<h3>事務局削除・警告について</h3>
+<hr>
+<font color="#ff0000">通報やコネポケ事務局が発見した規約に違反する商品や、コメント・迷惑行為・規約違反についてはコネポケ事務局にて内容を確認させていただき、適切に対応いたします。<br> 
 コネポケでは24時間体制で禁止出品物や迷惑コメントのチェックをしています。  
-
+</font><br>
+<br>
 コネポケ事務局の監視とユーザー様からの通報により、以下の内容を発見した場合は削除いたします。
 
-    ・誹謗中傷
-    ・個人情報
-    ・暴言、荒らしなどの迷惑行為
-    ・違法行為
-    ・違反行為
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>誹謗中傷</li>
+<li>個人情報</li>
+<li>暴言、荒らしなどの迷惑行為</li>
+<li>違法行為</li>
+<li>違反行為</li>
+</ul>
+</div>
 
-悪質な違法行為を行なったユーザーについては、警告およびアカウント停止の措置をとらせていただきます。  
-なお、コネポケの監視やユーザー様からの通報により法令違反を発見した場合は、警察への通報を行い捜査に協力いたします。  
+悪質な違反行為を行なったユーザーについては、警告およびアカウント停止の措置をとらせていただきます。<br> 
+<br>
+なお、コネポケの監視やユーザー様からの通報により法令違反を発見した場合は、警察への通報を行い捜査に協力いたします。
+<hr>
