--- a/5.利用規約など/ルールとマナー/9.取引をした商品が故障していました.md
+++ b/5.利用規約など/ルールとマナー/9.取引をした商品が故障していました.md
@@ -1,4 +1,11 @@
-# 取引をした商品が故障していました
+<h3>取引をした商品が故障していました</h3>
+<hr>
 
-お取引した商品の故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。  
-双方で話し合い、問題の解決を行なってくださいますよう、お願いいたします。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">お取引した商品の故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。<br>
+<br>
+双方で話し合い、問題の解決を行なってくださいますよう、お願いいたします。
+</div>
+
+お互いの認識の違いによるトラブルを防ぐためにも、商品の状態（汚れ・傷の状態や動作・非動作の状況等）や配送方法（配送料金）などをコメントで確認してから取引を行ってください。
+
+<hr>
