--- a/4.カテゴリから探す/2.引取について/7.気持ちよくお取引いただくために.md
+++ b/4.カテゴリから探す/2.引取について/7.気持ちよくお取引いただくために.md
@@ -1,15 +1,17 @@
-# 気持ちよくお取引いただくために
+<h3>気持ちよくお取引いただくために</h3>
+<hr>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #008dd7; background-color: #f5f5f5;">
+ご利用の際は<font color="#ff0000">「禁止されている行為」「禁止されている出品物」「ルールとマナー」</font>をご確認ください。</div>
 
-コネポケは使わなくなった物や、捨てるのはもったいない物を無料で`「あげたり」「もらったり」`できるサービスです。
+コネポケは使わなくなった物や、捨てるのはもったいない物を無料で<font color="#ff0000">「あげたり」「もらったり」</font>できるサービスです。<br>
+<br>
+繋げることで人に喜ばれ、捨てないことでゴミを出さず地球環境保全を推進します。<br>
+<br>
+世の中に喜びを提供するコネポケを安心して気持ちよくご利用いただくためにルールとマナーを守ってご利用ください。
 
-繋げることで人に喜ばれ、捨てないことでゴミを出さず地球環境保全を推進します。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">違反行為や通報があった場合はコネポケのアカウントを停止することもあります。</div>
 
-世の中に喜びを提供するコネポケを安心して気持ちよくご利用いただくためにルールとマナーを守ってご利用ください。  
-
-ご利用の際は`「禁止されている行為」「禁止されている出品物」「ルールとマナー」`をご確認ください。  
-
-違反行為や通報があった場合はコネポケのアカウントを停止することもあります。
-
-会ったことのない初めての相手との取引ですので、お互いに不安もあり、ちょっとした言葉遣いや認識の違いで不安にさせたり不快な気持ちにさせてしまったり、予期しないトラブルに発展してしまう恐れもあります。
-
-心遣いを忘れず、相手のことを考えて丁寧なコメントを心がけましょう。  
+会ったことのない初めての相手との取引ですので、お互いに不安もあり、ちょっとした言葉遣いや認識の違いで不安にさせたり不快な気持ちにさせてしまったり、予期しないトラブルに発展してしまう恐れもあります。<br>
+<br>
+心遣いを忘れず、相手のことを考えて丁寧なコメントを心がけましょう。
+<hr>
