--- a/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
+++ b/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
@@ -1,31 +1,109 @@
-# 出品商品を下書きに保存する、編集する
+<h3>出品商品を下書きに保存する、編集する</h3>
+<hr>
 
-出品した商品を一時的に取り下げたい時や、内容を編集したいときは、下書きに保存します。
+出品した商品を一時的に取り下げたい時や、内容を編集したいときは、下書きに保存します。<br>
 
-## ■iOS、Androidアプリをご利用の場合
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-### 【出品商品を下書きに保存する】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>出品商品を下書きに保存する</strong>
+</div>
 
-1. TOP画面左上の［三］を選択
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップすると出品を停止し、下書きに保存されます。</li>
+</ol>
 
-1. サイドメニューにある［履歴］をタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>下書きの編集方法</strong>
+</div>
+<ol>
+<li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
+<br>
+<li>［下書き一覧へ］または、右上の［フォルダアイコン］をタップ</li>
+<br>
+<li>下書き一覧より、編集したい投稿をタップする</li>
+<br>
+<li>出品画面より編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをタップ</li>
+</ol>
 
-1. 出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ
+<hr>
 
-1. 「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップすると出品を停止し、下書きに保存されます。
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-### 【下書きの編集方法】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>出品商品を下書きに保存する</strong>
+</div>
 
-1. HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ
+<ol>
+<li>TOP画面右上の［ユーザアイコン］をタップ</li>
+<br>
+<li>マイページ左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップすると出品を停止し、下書きに保存されます。</li>
+</ol>
 
-1. ［下書き一覧］または、右上の［フォルダアイコン］をタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>下書きの編集方法</strong>
+</div>
 
-1. 下書き一覧より、編集したい投稿をタップする
+<ol>
+<li>TOP画面右上の［ユーザアイコン］をタップ</li>
+<br>
+<li>マイページ左上の［三］をタップ</li>
+<br>
+<li>HOME画面右下の［出品ボタン］または、マイページサイドメニューの［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧より、編集したい投稿をタップする</li>
+<br>
+<li>出品画面より編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをタップ</li>
+</ol>
 
-1. 出品画面より編集したい内容を編集する
+<hr>
 
-1. ［下書き保存］または［出品する］ボタンをタップ
+<h3>■PCブラウザをご利用の場合</h3>
 
-## ■スマートフォンブラウザをご利用の場合
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>出品商品を下書きに保存する</strong>
+</div>
 
-## ■PCブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザアイコン］をクリック</li>
+<br>
+<li>マイページのサイドメニューにある［履歴・取引メッセージ］をクリック</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをクリック</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をクリックすると出品を停止し、下書きに保存されます。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>下書きの編集方法</strong>
+</div>
+
+<ol>
+<li>TOP画面右上の［ユーザアイコン］をクリック</li>
+<br>
+<li>マイページのサイドメニューにある［下書き一覧］をクリック</li>
+<br>
+<li>下書き一覧より、編集したい投稿をクリックする</li>
+<br>
+<li>出品画面より編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをクリック</li>
+</ol>
+
+<hr>
