--- a/2.はじめてガイド/2.引取する/5.取引相手に「いいね！」する.md
+++ b/2.はじめてガイド/2.引取する/5.取引相手に「いいね！」する.md
@@ -1,7 +1,12 @@
-# 取引相手に「いいね！」する
+<h3>取引相手に「いいね！」する</h3>
+<hr>
 
-取引が成立後に相手ユーザ様へ［いいね！］ができるようになります。
+<ul>
+<li>取引が成立後に相手ユーザ様へ<strong>［いいね！］</strong>ができるようになります。</li>
+<br>
+<li>良いお取り引きが出来た場合など、<strong>［いいね！］</strong>で相手ユーザ様を評価してあげましょう。</li>
+<br>
+<li>１つの取引に対して、１ユーザーしか<strong>［いいね！］</strong>することができません。</li>
+</ul>
 
-良いお取り引きが出来た場合など、［いいね！］で相手ユーザ様を評価してあげましょう。
-
-１つの取引に対して、１ユーザーしか［いいね！］することができません。
+<hr>
