--- a/2.はじめてガイド/3.リクエストする/6.リクエストの掲載期間ついて.md
+++ b/2.はじめてガイド/3.リクエストする/6.リクエストの掲載期間ついて.md
@@ -1,5 +1,8 @@
-# リクエストの掲載期間ついて
+<h3>リクエストの掲載期間について</h3>
+<hr>
 
 リクエストの掲載期間は90日間となります。
 
 90日経過すると自動で削除されますので、再リクエストをご希望の際は、新規にリクエストをお願いいたします。
+
+<hr>
