--- a/2.はじめてガイド/2.引取する/1.商品の探し方.md
+++ b/2.はじめてガイド/2.引取する/1.商品の探し方.md
@@ -1,34 +1,40 @@
-# 商品の探し方  
-  
-コネポケではいろんな方法で商品を探すことができます。  
+<h3>商品の探し方</h3>
+<hr>
+
+コネポケではいろんな方法で商品を探すことができます。
+
 ホーム画面の右上にある［虫眼鏡アイコン］をタップすると、検索画面に移動できます。
 
-## 【キーワードからさがす】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>キーワードからさがす</strong>
+</div>
 
-［キーワードからさがす］に欲しい商品のキーワードを入力します。  
+［キーワードからさがす］に欲しい商品のキーワードを入力します。
+
 画面下の［検索する］をタップすると、そのキーワードを含む商品を探すことができます。
 
-複数のキーワードで検索したい場合は、キーワードをスペースを空けて入力してください。
-
-入力例 : 冷蔵庫　ホワイト
-
-この場合は「冷蔵庫」と「ホワイト」の両方を含む商品が検索結果に表示されます。
-
-## 【カテゴリーからさがす】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>カテゴリーからさがす</strong>
+</div>
 
 ［カテゴリー選択］をタップするとカテゴリ一覧が表示されます。
 
-一覧の中からカテゴリ一名をタップすると、そのカテゴリ一に登録された商品のみが検索結果に表示されます。
+一覧の中からカテゴリ一を選択し、［検索する］をタップするとそのカテゴリ一に登録された商品のみが検索結果に表示されます。
 
-## 【エリアからさがす】
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>エリアからさがす</strong>
+</div>
 
-［地域を選択］をタップすると地域一覧が表示されます。  
-地域名をタップすると、そのエリアで出品している商品のみが検索結果に表示されます。  
 
----
+［地域を選択］をタップすると地域一覧が表示されます。
 
-※引取商品を探す場合は、検索条件は［出品商品］にチェックを入れてください  
-  
-※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。
-  
+地域を選択し［検索する］をタップすると、そのエリアで出品またはリクエストされている商品のみが検索結果に表示されます。
+
+<font color="#ff0000">※出品商品を探す場合は、検索条件は［出品商品］にチェックを入れてください。<br>
+<br>
+※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。<br>
+<br>
 ※適切なカテゴリーや地域を設定して検索すると、お探しの商品が見つかりやすくなります。
+</font>
+
+<hr>
