--- a/2.はじめてガイド/2.引取する/1.商品の探し方.md
+++ b/2.はじめてガイド/2.引取する/1.商品の探し方.md
@@ -25,12 +25,11 @@
 <strong>エリアからさがす</strong>
 </div>
 
-
 ［地域を選択］をタップすると地域一覧が表示されます。
 
 地域を選択し［検索する］をタップすると、そのエリアで出品またはリクエストされている商品のみが検索結果に表示されます。
 
-<font color="#ff0000">※出品商品を探す場合は、検索条件は［出品商品］にチェックを入れてください。<br>
+<br><font color="#ff0000">※出品商品を探す場合は、検索条件は［出品商品］にチェックを入れてください。<br>
 <br>
 ※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。<br>
 <br>
