--- a/2.はじめてガイド/4.レスする/1.リクエスト商品の探し方.md
+++ b/2.はじめてガイド/4.レスする/1.リクエスト商品の探し方.md
@@ -48,7 +48,7 @@
 <br>
 ※キーワード・カテゴリ・エリアは、表示されている条件を全て含めて検索を実行します。<br>
 <br>
-※適切なカテゴリーや地域を設定して検索すると、お探しの商品が見つかりやすくなります
+※適切なカテゴリーや地域を設定して検索すると、お探しの商品が見つかりやすくなります。
 </font>
 
 <hr>
