--- a/6.お問い合わせ/6.不具合について/1.アプリが落ちる、画像が表示されない.md
+++ b/6.お問い合わせ/6.不具合について/1.アプリが落ちる、画像が表示されない.md
@@ -17,3 +17,5 @@
 
 [![mail](https://github.com/sendroidsFamily/useGuides/blob/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
 
+追加
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
