--- a/2.はじめてガイド/5.会員登録・ログインについて/3.プロフィールの登録・変更について.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/3.プロフィールの登録・変更について.md
@@ -9,7 +9,7 @@
 </div>
 
 <ol>
-<li>TOP画面左上の［三］を選択</li>
+<li>TOP画面左上の［三］をタップ</li>
 <br>
 <li>サイドメニューの一番上［プロフィール画像］または［ニックネーム］をタップ</li>
 <br>
@@ -28,7 +28,7 @@
 </div>
 
 <ol>
-<li>TOP画面左上の［三］を選択</li>
+<li>TOP画面左上の［三］をタップ</li>
 <br>
 <li>サイドメニューにある［設定］＞［プロフィール設定］をタップ</li>
 <br>
