--- a/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
+++ b/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
@@ -1,8 +1,28 @@
-# 返金について
+<h3>返金について</h3>
+<hr>
+コネポケ有料サービスの利用料は月額継続課金方式となります。<br>
+<br>
+有料サービスをご利用する場合、登録日より1ヶ月のご利用期間ごとに、サービス料がかかります。
 
-コネポケプレミアム会員のサービス利用料は月額継続課金方式となります。  
-プレミアム会員のサービスをご利用する場合、登録日より1ヶ月のご利用期間ごとに、月額利用料金350円（税込）がかかります。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>プレミアム会員（月額350円）</strong>
+</div>
 
-途中で解約手続がなされても1ヶ月分の利用料金が発生いたします。
+プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（月額11,000円）</strong>
+</div>
 
-有効期間が残っている場合でも、退会後にプレミアム会員のサービスをご利用いただくことや、日割りなどでの返金はできませんので、予めご了承ください。  
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。<br>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+
+<ul>
+<li>登録後は1ヶ月ごとの自動継続課金となります</li>
+<br>
+<li>次回更新日の前日までに解約していただきますと、次月から課金されません</li>
+<br>
+<li>登録後にサービスを利用してすぐに解約することも可能です</li>
+<br>
+<li>登録を解除した日付にかかわらず、日割り返金はできません</li>
+</div>
+<hr>
