--- a/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
+++ b/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
@@ -1,14 +1,18 @@
 <h3>返金について</h3>
 <hr>
-コネポケ有料サービスの利用料は月額継続課金方式となります。<br>
-<br>
+
+コネポケ有料サービスの利用料は月額継続課金方式となります。
+
 有料サービスをご利用する場合、登録日より1ヶ月のご利用期間ごとに、サービス料がかかります。
+
+取引がキャンセルになった場合など、いかなる理由であっても返金はおこなっておりませんので、あらかじめご了承ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>プレミアム会員（月額350円）</strong>
 </div>
 
 プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>店舗掲載登録（月額11,000円）</strong>
 </div>
