--- a/4.カテゴリから探す/1.出品について/4.商品写真を編集したい.md
+++ b/4.カテゴリから探す/1.出品について/4.商品写真を編集したい.md
@@ -1,15 +1,18 @@
-# 商品写真を編集したい
+<h3>商品写真を編集したい</h3>
+<hr>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>写真の編集方法</strong>
+</div>
 
-商品写真の編集につきましては、
-画像の切り抜き（トリミング）のみ可能です
+<ul>
+<li>商品写真の編集は、画像の切り抜き（トリミング）のみ可能です。</li>
+<br>
+<li>出品画像の1回目のアップロード時に、編集いただけます。<br>
+1度確定すると、画像の再編集はできませんので、写真を削除後、再度アップロードください。</li>
+<br>
+<li>すでに出品している商品は、出品した商品を一時的に取り下げ、下書きに保存します。<br>
+<br>
+<font color="#ff0000">※出品中の商品の編集方法は［はじめてガイド］＞［出品する］＞［出品商品を下書きに保存する、編集する］をご確認ください。</font></li>
+</ul>
 
-また、出品画像の1回目のアップロード時のみ、編集いただけます。
-
-一度確定しますと、画像の再編集はできませんので、「×」で写真を削除後、再度アップロードください。
-
-   すでに出品している商品は、出品した商品を一時的に取り下げ、下書きに保存します。  
-   既に出品中の商品の編集方法は［はじめてガイド］＞［出品する］＞［出品商品を下書きに保存する、編集する」をご確認ください。
-
-出品ページで写真をタップすると、写真の登録画面が表示されます。
-
-※現在商品画像の編集機能はアプリのみ対応しております。
+<hr>
