--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/3.広告掲載料金について.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/3.広告掲載料金について.md
@@ -1,21 +1,82 @@
-# 広告掲載料金について
+<h3>広告掲載料金について</h3>
+<hr>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（月額11,000円）</strong>
+</div>
 
-コネポケ店舗ページへ店舗情報の掲載ができます。  
-掲載料金については【**月額11,000円（税込）**】となります。
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。<br>
 
-※広告掲載だけではなく、出品されている商品の引取りや、リクエストなど、コネポケ全てのサービスをご利用いただけます。
+【利用できるサービス】
+<ul>
+<li>店舗様専用ページに広告として店舗掲載を掲載</li>
+<li>出品商品を無制限に引き取れる</li>
+<li>リクエストに対してレスポンスがあった商品を無制限に引き取れる</li>
+<li>利用ユーザー様が店舗情報を見て直接仕事を依頼</li>
+</ul>
 
-- 登録後は1ヶ月ごとの自動継続課金となります
+※広告掲載だけではなく、出品されている商品の引取りやリクエストなど、コネポケ全てのサービスをご利用いただけます。<br>
 
-- 次回更新日の前日までに解約していただきますと、次月から課金されません
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>登録後は1ヶ月ごとの自動継続課金となります</li>
+<br>
+<li>次回更新日の前日までに解約していただきますと、次月から課金されません</li>
+<br>
+<li>登録後にサービスを利用してすぐに解約することも可能です</li>
+<br>
+<li>登録を解除した日付にかかわらず、日割り返金はできません</li>
+</div>
 
-- 掲載期間の途中でも、解約手続きが完了すると。有料サービスの機能をご利用いただけなくなります。  
-サービスを利用してすぐに解約することも可能です
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（自動課金）の解約手順</strong>
+</div>
 
-- 登録を解除した日付にかかわらず、日割り返金はできません
+ご利用の決済方法によって解約方法が異なりますので、決済方法をご確認の上、下記の方法でお手続きください。
 
----
+<h3>■Appを通じて決済した場合</h3>
+iPhone／iPadの「設定」アプリから解約してください。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>ホーム画面から「設定」アプリを開き、一番上に表示されている「自分の名前（Apple ID）」をタップ</li>
+<br>
+<li>「サブスクリプション」をタップ</li>
+<br>
+<li>加入中の継続利用サービス一覧が表示されますので、解約したいコンテンツをタップ</li>
+<br>
+<li>「サブスクリプションをキャンセルする」をタップ</li>
+<br>
+<li>［確認］をタップすると解約完了となります</li>
+</ol>
+</div>
 
-店舗掲載登録の解約をご希望の際は、以下の手順で解約申請をいただくようになります。
-
-［ガイド＆ヘルプ］＞［店舗掲載登録・ログインについて］＞［解約について］＞［店舗掲載登録を解約する］
+<h3>■Google Playを通じて決済した場合</h3>
+GooglePlayアプリから解約してください。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>Android スマートフォンまたはタブレットでGoogle Playを開きます</li>
+<br>
+<li>正しいGoogleアカウントにログインしていることを確認します</li>
+<br>
+<li>左上の「三」をタップし、［定期購入］を選択します</li>
+<br>
+<li>解約する定期購入を選択します</li>
+<br>
+<li>［定期購入を解約］をタップ</li>
+<br>
+<li>画面の指示に沿って操作を行います</li>
+<br>
+<li>「20●●/●/●に解約されます」と表示されたら解約完了となります</li>
+</ol>
+</div>
+<h3>■ブラウザを通じてクレジット決済した場合</h3>
+登録完了または自動更新時にお送りするメールに［自動課金停止URL］が記載されております。<br>
+<font color="#ff0000">※メールは大切に保管してください。</font>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>［自動課金停止URL］をクリックすると自動課金番号の入力ページに遷移します</li>
+<br>
+<li>自動課金番号を入力し、［次へ］をクリック</li>
+<br>
+<li>確認画面が出ますので、退会手続き（課金停止）をお願いいたします</li>
+</div>
+<hr>
