--- a/4.カテゴリから探す/3.リクエストについて/6.説明文と違う・不備のある商品だった.md
+++ b/4.カテゴリから探す/3.リクエストについて/6.説明文と違う・不備のある商品だった.md
@@ -1,5 +1,10 @@
-# 説明文と違う/不備のある商品がだった
+<h3>説明文と違う/不備のある商品だった</h3>
+<hr>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+お取引した商品の形状・状態・不備・故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。<br>
+<br>
+出品者様と取引メッセージで連絡を取り合い、問題の解決に向けてお話し合いを行なってくださいますよう、お願いいたします。
+</div>
 
-お取引した商品の故障・破損・不具合についてのクレームはコネポケ事務局は一切関与しておりません。
-
-相手ユーザー様と取引メッセージで連絡を取り合い、問題の解決に向けてお話し合いを行なってくださいますよう、お願いいたします。  
+お互いの認識違いによるトラブルを防ぐためにも、商品の状態（汚れ・傷の状態や動作・非動作の状況等）や配送方法（配送料金）などをコメントで確認してから取引を行ってください。
+<hr>
