--- a/4.カテゴリから探す/3.リクエストについて/1.レスの連絡があったのに取引が進まない.md
+++ b/4.カテゴリから探す/3.リクエストについて/1.レスの連絡があったのに取引が進まない.md
@@ -1,11 +1,12 @@
 <h3>レスの連絡があったのに取引が進まない</h3>
+
 <hr>
 
-取引メッセージ送信時は相手ユーザー様に通知が送られるようになっております。<br>
-<br>
-しかしながら、コネポケをご覧になれない状況であったり、取引メッセージの返信をお忘れになっていることも考えられます。<br>
-<br>
-申し訳ありませんが、再度取引メッセージを投稿して返事をお待ちいただくか、再リクエストして、他の方のレスポンスをお待ちになってください。<br>
+取引メッセージ送信時は相手ユーザー様に通知が送られるようになっております。
+
+しかしながら、コネポケをご覧になれない状況であったり、取引メッセージの返信をお忘れになっていることも考えられます。
+
+申し訳ありませんが、再度取引メッセージを投稿して返事をお待ちいただくか、再リクエストして、他の方のレスポンスをお待ちになってください。
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 悪質な場合は、問題発生となった対象商品ページより詳細内容を記載の上、<font color="#ff0000">［通報］</font>ください。<br>
@@ -17,6 +18,7 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>通報の手順</strong>
 </div>
+
 <ol>
 <li>通報したい問題発生となった対象商品を選択し、［通報］をタップ</li>
 <br>
@@ -29,6 +31,7 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>【通報できる内容】</strong>
 </div>
+
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 <ul>
 <li>不適切なコメント</li>
@@ -39,5 +42,7 @@
 <li>その他
 </ul>
 </div>
+
 コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
 <hr>
